hphp/hack/test/typecheck/dynamic_new6.php.exp
File "dynamic_new6.php", line 18, characters 13-17:
Cannot use dynamic new. (Naming[2060])
