hphp/hack/test/typecheck/dynamic_new6.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

class C {
  public string $s = 'C';
}

function f(): void {
  $c = new C();
  $cc = new $c->s();
}
